# spaceships-game-server

./: .gitmodules  CMakeLists.txt  README.md
scripts/: compile-proto.bash
src/: helloworld.cpp  main.cpp
src/net/includes/: client-channel.hpp  client-connection.hpp  network-manager.hpp  signaling-server.hpp
src/net/src/: client-connection.cpp  network-manager.cpp  signaling-server.cpp
src/proto/: controls-state.pb.cc  controls-state.pb.h  disconnect.pb.cc  disconnect.pb.h  float-vector.pb.cc  float-vector.pb.h  helloworld.pb.cc  helloworld.pb.h  input-action.pb.cc  input-action.pb.h  object-action.pb.cc  object-action.pb.h  object-state.pb.cc  object-state.pb.h  quaternion.pb.cc  quaternion.pb.h  request-ack.pb.cc  request-ack.pb.h  request-root.pb.cc  request-root.pb.h  response-root.pb.cc  response-root.pb.h  space-fighter-destroy.pb.cc  space-fighter-destroy.pb.h  space-fighter-input.pb.cc  space-fighter-input.pb.h  space-fighter-open-fire.pb.cc  space-fighter-open-fire.pb.h  spawn-request.pb.cc  spawn-request.pb.h  spawn-response.pb.cc  spawn-response.pb.h  world-state.pb.cc  world-state.pb.h
src/proto/space-fighter/: space-fighter-destroy.pb.cc  space-fighter-destroy.pb.h  space-fighter-got-hit.pb.cc  space-fighter-got-hit.pb.h  space-fighter-input.pb.cc  space-fighter-input.pb.h  space-fighter-open-fire.pb.cc  space-fighter-open-fire.pb.h  space-fighter-state.pb.cc  space-fighter-state.pb.h  space-fighter-stop-fire.pb.cc  space-fighter-stop-fire.pb.h
src/signaling-server/src/: signaling-server.cpp
src/util/includes/: converter.hpp  http.hpp  io.hpp  protobuf.hpp
src/util/src/: converter.cpp  http.cpp  io.cpp
src/world-simulator-connector/includes/: world-simulator-connector.hpp
src/world-simulator-connector/src/: world-simulator-connector.cpp
src/world-simulator-ipc/includes/: actions-handler.hpp  ipc-connection.hpp  retransmitter.hpp  world-state-dispatcher.hpp
src/world-simulator-ipc/src/: ipc-connection.cpp  retransmitter.cpp  world-state-dispatcher.cpp
